# Darkly

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
kdecoration/config/: CMakeLists.txt  kcm_darklydecoration.cpp
kstyle/: CMakeLists.txt
kstyle/config/: CMakeLists.txt  darklystyleconfigmodule.cpp
libdarklycommon/: CMakeLists.txt
